# flet_accountant

./: README.md  Untitled Diagram.drawio  pyproject.toml
flet_accountant/: config.py  main.py
flet_accountant/components/: add_entry.py  app_bar.py  nav_bar.py  theme_switcher.py
flet_accountant/components/common/: text_field.py
flet_accountant/components/data_visualizer/: paginated_data_table.py
flet_accountant/components/navigation/: app_bar.py  nav_bar.py
flet_accountant/components/new_entry_tab/: entry_data.py  new_entry.py
flet_accountant/components/theming/: theme_switcher.py
